...
    }
    
    func convertCurrency() {
            converting = true
            
            guard let amountValue = Double(amount), amountValue > 0 else {
                alertMessage = "Please enter a valid positive amount."
                showAlert = true
                converting = false
                return
            }

            guard !selectedTo.isEmpty else {
...
                return
            }

            model.convertCurrency(to: selectedTo, amount: amountValue) { [weak self] convertedAmount, error in
                DispatchQueue.main.async {
                    if let convertedAmount = convertedAmount {
                        self?.result = "Converted Amount: \(convertedAmount)"
                    } else {
                        self?.result = "Error: \(error?.localizedDescription ?? "Unknown error")"
                    }
                    self?.converting = false // Set converting to false once the conversion is done
                }
            }
...
